tests/object_widening/let_var_widen_with_spread.js
// regression test for order sentitive post inference check

import {InitialState, MOCK_UI_STATE} from './let_var_widen_with_spread_lib';

let newState;

newState = InitialState;

newState = {
  a: {},
  c: {},
  b: {
    ...MOCK_UI_STATE.b,
    fetching: true,
  },
}; // ok

newState = MOCK_UI_STATE; // error
